# mdformat-configurable-black

./: README.md  pyproject.toml
mdformat_configurable_black/: __init__.py  plugin.py
